--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ dependencies:
   flutter:
     sdk: flutter
   xml: ^3.5.0
+  html: ^0.14.0+2
   webfeed: ^0.4.2
   http: ^0.12.0+2
+  xml2json: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
