--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,387 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+lib/PlayeyJsonTest.dart
+lib/xml test.dart
+node_modules/camel-case/camel-case.d.ts
+node_modules/camel-case/camel-case.js
+node_modules/camel-case/LICENSE
+node_modules/camel-case/package.json
+node_modules/debug/.coveralls.yml
+node_modules/debug/.eslintrc
+node_modules/debug/.npmignore
+node_modules/debug/.travis.yml
+node_modules/debug/CHANGELOG.md
+node_modules/debug/component.json
+node_modules/debug/karma.conf.js
+node_modules/debug/LICENSE
+node_modules/debug/Makefile
+node_modules/debug/node.js
+node_modules/debug/package.json
+node_modules/debug/README.md
+node_modules/debug/src/browser.js
+node_modules/debug/src/debug.js
+node_modules/debug/src/index.js
+node_modules/debug/src/inspector-log.js
+node_modules/debug/src/node.js
+node_modules/encoding/.npmignore
+node_modules/encoding/.travis.yml
+node_modules/encoding/lib/encoding.js
+node_modules/encoding/lib/iconv-loader.js
+node_modules/encoding/LICENSE
+node_modules/encoding/package.json
+node_modules/encoding/README.md
+node_modules/encoding/test/test.js
+node_modules/iconv-lite/Changelog.md
+node_modules/iconv-lite/encodings/dbcs-codec.js
+node_modules/iconv-lite/encodings/dbcs-data.js
+node_modules/iconv-lite/encodings/index.js
+node_modules/iconv-lite/encodings/internal.js
+node_modules/iconv-lite/encodings/sbcs-codec.js
+node_modules/iconv-lite/encodings/sbcs-data-generated.js
+node_modules/iconv-lite/encodings/sbcs-data.js
+node_modules/iconv-lite/encodings/tables/big5-added.json
+node_modules/iconv-lite/encodings/tables/cp936.json
+node_modules/iconv-lite/encodings/tables/cp949.json
+node_modules/iconv-lite/encodings/tables/cp950.json
+node_modules/iconv-lite/encodings/tables/eucjp.json
+node_modules/iconv-lite/encodings/tables/gb18030-ranges.json
+node_modules/iconv-lite/encodings/tables/gbk-added.json
+node_modules/iconv-lite/encodings/tables/shiftjis.json
+node_modules/iconv-lite/encodings/utf16.js
+node_modules/iconv-lite/encodings/utf7.js
+node_modules/iconv-lite/lib/bom-handling.js
+node_modules/iconv-lite/lib/extend-node.js
+node_modules/iconv-lite/lib/index.d.ts
+node_modules/iconv-lite/lib/index.js
+node_modules/iconv-lite/lib/streams.js
+node_modules/iconv-lite/LICENSE
+node_modules/iconv-lite/package.json
+node_modules/iconv-lite/README.md
+node_modules/is-stream/index.js
+node_modules/is-stream/license
+node_modules/is-stream/package.json
+node_modules/is-stream/readme.md
+node_modules/isomorphic-fetch/.editorconfig
+node_modules/isomorphic-fetch/.jshintrc
+node_modules/isomorphic-fetch/.npmignore
+node_modules/isomorphic-fetch/.travis.yml
+node_modules/isomorphic-fetch/bower.json
+node_modules/isomorphic-fetch/fetch-bower.js
+node_modules/isomorphic-fetch/fetch-npm-browserify.js
+node_modules/isomorphic-fetch/fetch-npm-node.js
+node_modules/isomorphic-fetch/LICENSE
+node_modules/isomorphic-fetch/node_modules/node-fetch/.npmignore
+node_modules/isomorphic-fetch/node_modules/node-fetch/.travis.yml
+node_modules/isomorphic-fetch/node_modules/node-fetch/CHANGELOG.md
+node_modules/isomorphic-fetch/node_modules/node-fetch/ERROR-HANDLING.md
+node_modules/isomorphic-fetch/node_modules/node-fetch/index.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/lib/body.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/lib/fetch-error.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/lib/headers.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/lib/index.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/lib/request.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/lib/response.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/LICENSE.md
+node_modules/isomorphic-fetch/node_modules/node-fetch/LIMITS.md
+node_modules/isomorphic-fetch/node_modules/node-fetch/package.json
+node_modules/isomorphic-fetch/node_modules/node-fetch/README.md
+node_modules/isomorphic-fetch/node_modules/node-fetch/test/dummy.txt
+node_modules/isomorphic-fetch/node_modules/node-fetch/test/server.js
+node_modules/isomorphic-fetch/node_modules/node-fetch/test/test.js
+node_modules/isomorphic-fetch/package.json
+node_modules/isomorphic-fetch/README.md
+node_modules/isomorphic-fetch/test/api.test.js
+node_modules/jsonp/.npmignore
+node_modules/jsonp/.travis.yml
+node_modules/jsonp/.zuul.yml
+node_modules/jsonp/bower.json
+node_modules/jsonp/component.json
+node_modules/jsonp/History.md
+node_modules/jsonp/index.js
+node_modules/jsonp/package.json
+node_modules/jsonp/Readme.md
+node_modules/jsonp/test/basic.js
+node_modules/lodash._basecallback/index.js
+node_modules/lodash._basecallback/LICENSE
+node_modules/lodash._basecallback/package.json
+node_modules/lodash._basecallback/README.md
+node_modules/lodash._baseeach/index.js
+node_modules/lodash._baseeach/LICENSE.txt
+node_modules/lodash._baseeach/package.json
+node_modules/lodash._baseeach/README.md
+node_modules/lodash._basefind/index.js
+node_modules/lodash._basefind/LICENSE.txt
+node_modules/lodash._basefind/package.json
+node_modules/lodash._basefind/README.md
+node_modules/lodash._basefindindex/index.js
+node_modules/lodash._basefindindex/LICENSE.txt
+node_modules/lodash._basefindindex/package.json
+node_modules/lodash._basefindindex/README.md
+node_modules/lodash._baseflatten/index.js
+node_modules/lodash._baseflatten/LICENSE
+node_modules/lodash._baseflatten/package.json
+node_modules/lodash._baseflatten/README.md
+node_modules/lodash._basefor/index.js
+node_modules/lodash._basefor/LICENSE
+node_modules/lodash._basefor/package.json
+node_modules/lodash._basefor/README.md
+node_modules/lodash._baseisequal/index.js
+node_modules/lodash._baseisequal/LICENSE.txt
+node_modules/lodash._baseisequal/package.json
+node_modules/lodash._baseisequal/README.md
+node_modules/lodash._baseismatch/index.js
+node_modules/lodash._baseismatch/LICENSE.txt
+node_modules/lodash._baseismatch/package.json
+node_modules/lodash._baseismatch/README.md
+node_modules/lodash._basematches/index.js
+node_modules/lodash._basematches/LICENSE.txt
+node_modules/lodash._basematches/package.json
+node_modules/lodash._basematches/README.md
+node_modules/lodash._bindcallback/index.js
+node_modules/lodash._bindcallback/LICENSE.txt
+node_modules/lodash._bindcallback/package.json
+node_modules/lodash._bindcallback/README.md
+node_modules/lodash._createaggregator/index.js
+node_modules/lodash._createaggregator/LICENSE.txt
+node_modules/lodash._createaggregator/package.json
+node_modules/lodash._createaggregator/README.md
+node_modules/lodash._getnative/index.js
+node_modules/lodash._getnative/LICENSE
+node_modules/lodash._getnative/package.json
+node_modules/lodash._getnative/README.md
+node_modules/lodash._isiterateecall/index.js
+node_modules/lodash._isiterateecall/LICENSE.txt
+node_modules/lodash._isiterateecall/package.json
+node_modules/lodash._isiterateecall/README.md
+node_modules/lodash._pickbyarray/index.js
+node_modules/lodash._pickbyarray/LICENSE.txt
+node_modules/lodash._pickbyarray/package.json
+node_modules/lodash._pickbyarray/README.md
+node_modules/lodash._pickbycallback/index.js
+node_modules/lodash._pickbycallback/LICENSE.txt
+node_modules/lodash._pickbycallback/package.json
+node_modules/lodash._pickbycallback/README.md
+node_modules/lodash.find/index.js
+node_modules/lodash.find/LICENSE.txt
+node_modules/lodash.find/package.json
+node_modules/lodash.find/README.md
+node_modules/lodash.findwhere/index.js
+node_modules/lodash.findwhere/LICENSE.txt
+node_modules/lodash.findwhere/package.json
+node_modules/lodash.findwhere/README.md
+node_modules/lodash.get/index.js
+node_modules/lodash.get/LICENSE
+node_modules/lodash.get/package.json
+node_modules/lodash.get/README.md
+node_modules/lodash.indexby/index.js
+node_modules/lodash.indexby/LICENSE.txt
+node_modules/lodash.indexby/package.json
+node_modules/lodash.indexby/README.md
+node_modules/lodash.invert/index.js
+node_modules/lodash.invert/LICENSE
+node_modules/lodash.invert/package.json
+node_modules/lodash.invert/README.md
+node_modules/lodash.isarguments/index.js
+node_modules/lodash.isarguments/LICENSE
+node_modules/lodash.isarguments/package.json
+node_modules/lodash.isarguments/README.md
+node_modules/lodash.isarray/index.js
+node_modules/lodash.isarray/LICENSE
+node_modules/lodash.isarray/package.json
+node_modules/lodash.isarray/README.md
+node_modules/lodash.istypedarray/index.js
+node_modules/lodash.istypedarray/LICENSE
+node_modules/lodash.istypedarray/package.json
+node_modules/lodash.istypedarray/README.md
+node_modules/lodash.keys/index.js
+node_modules/lodash.keys/LICENSE
+node_modules/lodash.keys/package.json
+node_modules/lodash.keys/README.md
+node_modules/lodash.keysin/index.js
+node_modules/lodash.keysin/LICENSE.txt
+node_modules/lodash.keysin/package.json
+node_modules/lodash.keysin/README.md
+node_modules/lodash.mapkeys/index.js
+node_modules/lodash.mapkeys/LICENSE.txt
+node_modules/lodash.mapkeys/package.json
+node_modules/lodash.mapkeys/README.md
+node_modules/lodash.pairs/index.js
+node_modules/lodash.pairs/LICENSE.txt
+node_modules/lodash.pairs/package.json
+node_modules/lodash.pairs/README.md
+node_modules/lodash.pick/index.js
+node_modules/lodash.pick/LICENSE.txt
+node_modules/lodash.pick/package.json
+node_modules/lodash.pick/README.md
+node_modules/lodash.restparam/index.js
+node_modules/lodash.restparam/LICENSE.txt
+node_modules/lodash.restparam/package.json
+node_modules/lodash.restparam/README.md
+node_modules/lower-case/LICENSE
+node_modules/lower-case/lower-case.d.ts
+node_modules/lower-case/lower-case.js
+node_modules/lower-case/package.json
+node_modules/lower-case/README.md
+node_modules/minimist/.travis.yml
+node_modules/minimist/example/parse.js
+node_modules/minimist/index.js
+node_modules/minimist/LICENSE
+node_modules/minimist/package.json
+node_modules/minimist/readme.markdown
+node_modules/minimist/test/all_bool.js
+node_modules/minimist/test/bool.js
+node_modules/minimist/test/dash.js
+node_modules/minimist/test/default_bool.js
+node_modules/minimist/test/dotted.js
+node_modules/minimist/test/kv_short.js
+node_modules/minimist/test/long.js
+node_modules/minimist/test/num.js
+node_modules/minimist/test/parse.js
+node_modules/minimist/test/parse_modified.js
+node_modules/minimist/test/short.js
+node_modules/minimist/test/stop_early.js
+node_modules/minimist/test/unknown.js
+node_modules/minimist/test/whitespace.js
+node_modules/ms/index.js
+node_modules/ms/license.md
+node_modules/ms/package.json
+node_modules/ms/readme.md
+node_modules/nba-client-template/example-clients/golang/client/api.go
+node_modules/nba-client-template/example-clients/golang/client/client.go
+node_modules/nba-client-template/example-clients/golang/generate/generate.go
+node_modules/nba-client-template/example-clients/golang/usage.go
+node_modules/nba-client-template/example-clients/simple-client.py
+node_modules/nba-client-template/example-clients/simple-client.rb
+node_modules/nba-client-template/nba.json
+node_modules/nba-client-template/notes.md
+node_modules/nba-client-template/package.json
+node_modules/nba-client-template/README.md
+node_modules/nba-client-template/script/generate.js
+node_modules/nba-client-template/script/parse.js
+node_modules/nba-client-template/script/urls
+node_modules/nba-client-template/test/index.js
+node_modules/nba-client-template/yarn.lock
+node_modules/nba/.codeclimate.yml
+node_modules/nba/.eslintignore
+node_modules/nba/.eslintrc.js
+node_modules/nba/.gitattributes
+node_modules/nba/.travis.yml
+node_modules/nba/CONTRIBUTING.md
+node_modules/nba/data/players.json
+node_modules/nba/data/teams.json
+node_modules/nba/dist/nba.js
+node_modules/nba/doc/stats.md
+node_modules/nba/index.js
+node_modules/nba/LICENSE.md
+node_modules/nba/Makefile
+node_modules/nba/package.json
+node_modules/nba/README.md
+node_modules/nba/scripts/generate-stats-docs.js
+node_modules/nba/scripts/players.js
+node_modules/nba/scripts/proxy.js
+node_modules/nba/scripts/run-endpoint.js
+node_modules/nba/scripts/teams.js
+node_modules/nba/scripts/update-json.js
+node_modules/nba/src/cli.js
+node_modules/nba/src/data.js
+node_modules/nba/src/dicts.js
+node_modules/nba/src/get-json.js
+node_modules/nba/src/index.js
+node_modules/nba/src/sport-vu.js
+node_modules/nba/src/stats.js
+node_modules/nba/src/synergy.js
+node_modules/nba/src/team-info.js
+node_modules/nba/src/transforms.js
+node_modules/nba/src/util/blank.js
+node_modules/nba/src/util/build-players.js
+node_modules/nba/src/util/collectify.js
+node_modules/nba/src/util/merge-collections.js
+node_modules/nba/src/util/string.js
+node_modules/nba/src/util/translate-keys.js
+node_modules/nba/src/util/unnest.js
+node_modules/nba/test/browser/index.html
+node_modules/nba/test/browser/sport-vu-browserified.js
+node_modules/nba/test/browser/stats-browserified.js
+node_modules/nba/test/get-json-stub.js
+node_modules/nba/test/inspect.js
+node_modules/nba/test/integration/data.js
+node_modules/nba/test/integration/sport-vu.js
+node_modules/nba/test/integration/stats.js
+node_modules/nba/test/integration/synergy.js
+node_modules/nba/test/nba-api-spy.js
+node_modules/nba/test/setup.js
+node_modules/nba/test/unit/find.js
+node_modules/nba/test/unit/sport-vu.js
+node_modules/nba/test/unit/stats.js
+node_modules/nba/test/unit/util/string.js
+node_modules/nba/webpack.config.js
+node_modules/nba/yarn.lock
+node_modules/no-case/LICENSE
+node_modules/no-case/no-case.d.ts
+node_modules/no-case/no-case.js
+node_modules/no-case/package.json
+node_modules/no-case/README.md
+node_modules/no-case/vendor/camel-case-regexp.js
+node_modules/no-case/vendor/camel-case-upper-regexp.js
+node_modules/no-case/vendor/non-word-regexp.js
+node_modules/node-fetch/browser.js
+node_modules/node-fetch/CHANGELOG.md
+node_modules/node-fetch/lib/index.es.js
+node_modules/node-fetch/lib/index.js
+node_modules/node-fetch/lib/index.mjs
+node_modules/node-fetch/LICENSE.md
+node_modules/node-fetch/package.json
+node_modules/node-fetch/README.md
+node_modules/pify/index.js
+node_modules/pify/license
+node_modules/pify/package.json
+node_modules/pify/readme.md
+node_modules/punycode/LICENSE-MIT.txt
+node_modules/punycode/package.json
+node_modules/punycode/punycode.js
+node_modules/punycode/README.md
+node_modules/querystring/.History.md.un~
+node_modules/querystring/.package.json.un~
+node_modules/querystring/.Readme.md.un~
+node_modules/querystring/.travis.yml
+node_modules/querystring/decode.js
+node_modules/querystring/encode.js
+node_modules/querystring/History.md
+node_modules/querystring/index.js
+node_modules/querystring/License.md
+node_modules/querystring/package.json
+node_modules/querystring/Readme.md
+node_modules/querystring/test/.index.js.un~
+node_modules/querystring/test/common-index.js
+node_modules/querystring/test/index.js
+node_modules/querystring/test/tap-index.js
+node_modules/safer-buffer/dangerous.js
+node_modules/safer-buffer/LICENSE
+node_modules/safer-buffer/package.json
+node_modules/safer-buffer/Porting-Buffer.md
+node_modules/safer-buffer/Readme.md
+node_modules/safer-buffer/safer.js
+node_modules/safer-buffer/tests.js
+node_modules/upper-case/LICENSE
+node_modules/upper-case/package.json
+node_modules/upper-case/README.md
+node_modules/upper-case/upper-case.d.ts
+node_modules/upper-case/upper-case.js
+node_modules/url/.npmignore
+node_modules/url/.travis.yml
+node_modules/url/.zuul.yml
+node_modules/url/LICENSE
+node_modules/url/package.json
+node_modules/url/README.md
+node_modules/url/test.js
+node_modules/url/url.js
+node_modules/url/util.js
+node_modules/whatwg-fetch/dist/fetch.umd.js
+node_modules/whatwg-fetch/dist/fetch.umd.js.flow
+node_modules/whatwg-fetch/fetch.js
+node_modules/whatwg-fetch/fetch.js.flow
+node_modules/whatwg-fetch/LICENSE
+node_modules/whatwg-fetch/package.json
+node_modules/whatwg-fetch/README.md
+package-lock.json
