--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   webfeed: ^0.4.2
   http: ^0.12.0+2
   xml2json: ^3.0.3
+  json_table: ^1.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +46,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/nba.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
