--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,4 @@ node_modules/whatwg-fetch/LICENSE
 node_modules/whatwg-fetch/package.json
 node_modules/whatwg-fetch/README.md
 package-lock.json
+NBA ENDPOINTS
