--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,19 @@ dependencies:
   intl: ^0.16.0
   equatable: ^1.0.1
   reorderables: ^0.2.12
+  date_picker_timeline: ^1.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  path_provider: ^1.5.1
+  hive: ^1.3.0
+  hive_flutter: ^0.3.0+1
 
 dev_dependencies:
+  build_runner: ^1.7.3
+  hive_generator: ^0.7.0
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
